<resources>
    <string name="app_name">MovieBase</string>
    <string name="film_name">Avengers: \nEnd Game</string>
    <string name="age_limit">13+</string>
    <string name="film_genre">Action, Adventure, Fantasy</string>
    <string name="storyline">Storyline</string>
    <string name="reviews_qnt">125 REVIEWS</string>
    <string name="storyline_content">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="actor_1_name">Robert Downey Jr.</string>
    <string name="actor_2_name">Chris Evans</string>
    <string name="actor_3_name">Mark Ruffalo</string>
    <string name="actor_4_name">Chris Hemsworth</string>
    <string name="movies_list">Movie list</string>
    <string name="film_genre_movies_list">Action, Adventure, Drama</string>
    <string name="film_name_movies_list">Avengers: End Game</string>
    <string name="film_mins">137 MIN</string>
    <string name="min">%d MIN</string>
    <string name="reviews">%d reviews</string>
    <string name="pg">%d +</string>

</resources>